04.01 Adding GUI