@@ -15,6 +15,11 @@
 	<description>Sistem de stocare distribuita a cheilor criptografice</description>
 	<properties>
 		<java.version>17</java.version>
+
+
+		<javafx.version>17</javafx.version>
+		<javafx.modules>javafx.controls,javafx.fxml</javafx.modules>
+		<javafx.module.path>E:/javafx-sdk-17.0.9/lib</javafx.module.path>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -40,7 +45,7 @@
 		<dependency>
 			<groupId>com.networknt</groupId>
 			<artifactId>json-schema-validator</artifactId>
-			<version>1.0.42</version>
+			<version>1.1.0</version>
 		</dependency>
 
 		<dependency>
@@ -48,10 +53,25 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.4.11</version>
 		</dependency>
+
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 			<version>3.2.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>11</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-fxml</artifactId>
+			<version>22-ea+16</version>
 		</dependency>
 
 		<dependency>
@@ -69,6 +89,12 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.13.4.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -80,6 +106,21 @@
 					<image>
 						<builder>paketobuildpacks/builder-jammy-base:latest</builder>
 					</image>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>0.0.1</version>
+				<configuration>
+					<mainClass>proiectdiz.GUI.MyJavaFxApp</mainClass>
+					<options>
+						<option>--module-path</option>
+						<option>E:/javafx-sdk-17.0.9/lib</option>
+						<option>--add-modules</option>
+						<option>javafx.controls,javafx.fxml</option>
+					</options>
 				</configuration>
 			</plugin>
 		</plugins>
